<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:id="@+id/layoutHolder">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="132dp"
        android:padding="5dp"
        android:id="@+id/topSection">

        <Button
            android:id="@+id/playButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3"
            android:allowUndo="false"
            android:onClick="onPlayClick"
            android:singleLine="false"
            android:text="@string/playSound"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/nextSound"
            android:id="@+id/nextButton"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:onClick="onNextClick" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_fab_shadow_mid_color"
        android:id="@+id/middleSection"
        android:layout_weight="0.35">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/emotionTitle"
            android:text="@string/emotion"
            android:layout_weight="0.1"
            android:textSize="@dimen/abc_action_bar_progress_bar_size"
            android:background="@color/accent_material_dark" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9">

            <RadioGroup
                android:id="@+id/emoRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.9"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/happyRB"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"

                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/happy"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/surprisedRB"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="@string/surprised"

                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/angryRB"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="@string/angry"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/afraidRB"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:nestedScrollingEnabled="false"
                    android:onClick="onEmoChoice"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="@string/afraid"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/neutralRB"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="@string/neutral"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/disgustedRB"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="@string/disgusted"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/sadRB"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="@string/sad"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/tiredRB"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="@string/tired"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioButton
                    android:id="@+id/calmRB"
                    android:layout_width="@dimen/radio_button"
                    android:layout_height="@dimen/radio_button"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:onClick="onEmoChoice"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:text="@string/calm"
                    android:textAppearance="?android:attr/textAppearanceLarge"


                    />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomSection"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/degree"
            android:id="@+id/degreeTitle"
            android:layout_weight="0.1"
            android:textSize="@dimen/abc_action_bar_progress_bar_size"
            android:background="@color/accent_material_dark" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:layout_gravity="center">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"


                android:background="@color/abc_search_url_text_normal"
                android:alpha="0.9"
                android:layout_gravity="center"

                android:id="@+id/degreeRadioGroup">


           <!--     <RadioButton
                    android:layout_width="@dimen/radio_button_degree"
                    android:layout_height="@dimen/radio_button_degree"
                    android:text="@string/na"
                    android:id="@+id/naRB"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="200dp"
                    android:onClick="onDegreeChoice"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>-->

                <RadioButton
                    android:layout_width="@dimen/radio_button_degree"
                    android:layout_height="@dimen/radio_button_degree"
                    android:text="@string/weak"
                    android:id="@+id/weakRB"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="330dp"
                    android:onClick="onDegreeChoice"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <RadioButton
                    android:layout_width="@dimen/radio_button_degree"
                    android:layout_height="@dimen/radio_button_degree"
                    android:text="@string/average"
                    android:id="@+id/averageRB"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:checked="false"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:onClick="onDegreeChoice"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <RadioButton
                    android:layout_width="@dimen/radio_button_degree"
                    android:layout_height="@dimen/radio_button_degree"
                    android:text="@string/strong"
                    android:id="@+id/strongRB"
                    android:background="@drawable/buttonbackground"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:onClick="onDegreeChoice"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>



            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restartSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:layout_marginLeft="200dp">

        <LinearLayout
            android:id="@+id/restartLeftSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/countRestView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creatorEmail"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restartRightSection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/restartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRestartClick"
                android:text="@string/restart"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
